--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0"
